<resources>
    <string name="app_name">MyAnimeCompanion</string>
    <string name="save">SAVE</string>
    <string name="edit_dialog_title">EDIT</string>
    <string name="edit_dialog_close_btn_description">Close</string>
    <string name="edit_dialog_episodes_watched_title_text">Episodes watched</string>
    <string name="tv_edit_dialog_status_title_text">Change status</string>
    <string name="edit_dialog_rating_title_text">Rating</string>
    <string name="search_hint">Search...</string>
    <string name="network_error_occurred">Network error</string>
    <string name="empty_search_results">No results</string>
    <string name="empty_user_list">You haven\'t added any anime to your list yet</string>
    <string name="generic_error_occurred">An error occurred</string>
    <string name="no_results">No results</string>
    <string name="query_too_short">Search query is too short (min. 3 characters)</string>
    <string name="invalid_search_query">Invalid search query</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="genres_label">Genres:</string>
    <string name="alternative_titles_label">Alternative Titles:</string>
    <string name="status_label">Status</string>
    <string name="remove_from_list">Delete</string>
    <string name="confirm_delete">Remove anime from your list?</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="filter_hint">Filter...</string>
</resources>
