<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.edit.EditFragment">

    <data>

        <variable
            name="viewModel"
            type="com.alexis.myanimecompanion.ui.edit.EditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="26dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_edit_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:contentDescription="@string/edit_dialog_close_btn_description"
            android:minHeight="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit_dialog_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:padding="4dp"
            android:text="@string/save"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_edit_dialog_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_edit_dialog_save" />

        <View
            android:id="@+id/v_edit_dialog_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorSecondaryVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_dialog_save" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/v_edit_dialog_divider">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_edit_dialog_status_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_edit_dialog_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_edit_dialog_status_title_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_edit_dialog_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dialog"
                    app:spinnerValue="@={viewModel.currentStatus}" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_edit_dialog_ep_watched_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_edit_dialog_ep_watched"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_dialog_episodes_watched_title_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_edit_dialog_ep_released"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="end"
                        app:epsReleased="@{viewModel.anime}"
                        tools:text="Eps. Released: 10" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spn_edit_dialog_ep_watched"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:minHeight="48dp"
                        android:spinnerMode="dialog"
                        app:spinnerValue="@={viewModel.episodesWatched}" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_edit_dialog_rating_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_edit_dialog_rating_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_dialog_rating_title_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_edit_dialog_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dialog"
                    app:spinnerValue="@={viewModel.userScore}" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
